2008-10-02  Iago Toral Quiroga  <itoral@igalia.com>

        * jhbuild/commands/bot.py: Fixed an undefined variable error when
        starting the buildbot master server.

2008-10-02  Luca Ferretti <elle.uca@libero.it>

	* modulesets/gnome-suites-2.24.modules: ORBit2 branched for 2.24

2008-10-02  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.26.modules:
	* modulesets/gnome-suites-2.26.modules: replaced obsolete gtkunique
	module by the new libunique, and get it from a stable tarball.

2008-10-01  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.26.modules: nautilus now has a dependency on
	gtkunique; also added suggestions on beagle and tracker.

	* modulesets/gnome-suites-2.26.modules: removed instruction to build
	tracker after deskbar-applet as it triggers a bug in current build
	order resolution.

2008-10-01  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: nautilus and eel branched for
	2.24.

2008-09-30  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/tinderbox.py: use encoding-aware output files, to
	avoid UnicodeEncodeError.  (closes: #554488)

2008-09-30  Frederic Peters  <fpeters@0d.be>

	* Makefile.plain: fixed call to po/Makefile.plain.

2008-09-29  Marko Anastasov  <marko.anastasov@gmail.com>

	* modulesets/gnome-external-deps-2.26.modules: Fixed typo in
	fontconfig tarball URL.

2008-09-29  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-suites-2.26.modules: Restore the right branch for
	epiphany.

2008-09-28  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: updated pixman to 0.12,
	as required by newer cairo.

2008-09-28  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules:
	* modulesets/gnome-external-deps-2.26.modules: updated cairo to stable
	release, 1.8.0.  (closes: #554139)

2008-09-27  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-2.26.modules: