@@ -1,5 +1,11 @@
 2008-10-02  Iago Toral Quiroga  <itoral@igalia.com>
 
+	* jhbuild/buildbot/steps.py: Fixed JHBuildModulePathCommand so
+	that action is a string instead of a list. Also, fixed incorrect
+	usage of the --in-builddir option when executing the action.
+
+2008-10-02  Iago Toral Quiroga  <itoral@igalia.com>
+
         * jhbuild/commands/bot.py: Fixed an undefined variable error when
         starting the buildbot master server.
 
